--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "@dcloudio/vite-plugin-uni": "3.0.0-4000620240325001",
     "@vant/area-data": "^1.5.1",
     "@vant/touch-emulator": "^1.4.0",
-    "uni-simple-router": "2.0.8-beta.4"
+    "uni-simple-router": "2.0.8-beta.4",
+    "weixin-js-sdk": "^1.6.5"
   },
   "devDependencies": {
     "@vant/weapp": "^1.11.4",
