--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
     "unocss": "^0.58.7",
+    "unocss-preset-weapp": "^0.60.1",
     "unplugin-auto-import": "^0.17.5",
     "vant": "^4.8.10",
     "vite": "4.3.5",
